--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spielplatz</title>
+  <style>
+    body {
+      background-color: black;
+    }
+  </style>
 </head>
 <body>
   <script type="module" src="/dist/main.js"></script>
